# snaike

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  snaike  snaike.cbp
Debug/: vc140.idb
Debug/Snaike.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Snaike.lastbuildstate
lib/glad-0.1.13a0/: CMakeLists.txt  GLAD.cbp  Makefile  cmake_install.cmake
lib/glad-0.1.13a0/glad/lang/common/: generator.py
lib/glad-0.1.13a0/include/glad/: glad.h
lib/glad-0.1.13a0/src/: glad.c
lib/glfw-3.2.1/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.2.1/src/: Makefile  cmake_install.cmake
src/: main.cpp
src/snake/: game_object.cpp  game_object.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h
src/utils/: color.cpp  color.h  direction.h  drawing.cpp  drawing.h  input.cpp  input.h  utils.cpp  utils.h
